vcs/specs/parser/fail/proofs/invalid_theorem.vr
// @test: parse-fail
// @level: L0
// @tags: parser, proofs, theorem, error
// @description: Test invalid theorem declaration without name or body
// @expected-error: E020

theorem;
